Added main five posts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorTextMainPostTitle">#000</color>
+    <color name="colorSubTextPost">#2C2C2C</color>
+    <color name="colorTextMainPostAuthor">#bdbdbd</color>
 </resources>
