--- a/app/src/main/res/layout/fragment_post_page.xml
+++ b/app/src/main/res/layout/fragment_post_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -11,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:layout_margin="10dp">
 
-        <TableLayout
-            android:id="@+id/main_entry_page_table_layout"
+        <TextView
+            android:id="@+id/post_content_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:stretchColumns="*"/>
+            android:layout_height="wrap_content"/>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
