--- a/app/src/main/res/layout/fragment_simple_post_page.xml
+++ b/app/src/main/res/layout/fragment_simple_post_page.xml
@@ -17,13 +17,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/post_title_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="18sp"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+            <TextView
             android:id="@+id/post_content_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/post_title_text_view" />
 
         <TextView
             android:id="@+id/comments_literal"
@@ -32,7 +40,7 @@
             android:layout_margin="10dp"
             app:layout_constraintTop_toBottomOf="@id/post_content_text_view"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="Comments "
+            android:text="@string/comments"
             android:visibility="gone"
             android:textSize="20sp"/>
 
