--- a/app/src/main/res/layout/post_single_comment.xml
+++ b/app/src/main/res/layout/post_single_comment.xml
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_card_view"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    card_view:cardCornerRadius="4dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
+        android:id="@+id/post_single_comment_divider"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
-        <TextView
-            android:id="@+id/post_single_comment_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_margin="5dp"/>
+    <TextView
+        android:id="@+id/post_single_comment_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/post_single_comment_divider"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_margin="5dp"/>
 
-        <TextView
-            android:id="@+id/post_single_comment_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:layout_constraintTop_toBottomOf="@id/post_single_comment_title"
-            card_view:layout_constraintStart_toStartOf="parent"
-            android:textSize="14sp"
-            android:layout_margin="5dp"/>
+    <TextView
+        android:id="@+id/post_single_comment_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/post_single_comment_title"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="14sp"
+        android:layout_margin="5dp"/>
 
-        <TextView
-            android:id="@+id/post_single_comment_username"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            card_view:layout_constraintTop_toBottomOf="@id/post_single_comment_content"
-            card_view:layout_constraintStart_toStartOf="parent"
-            android:textStyle="italic"
-            android:textSize="12sp"
-            android:layout_margin="5dp"/>
+    <TextView
+        android:id="@+id/post_single_comment_username"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/post_single_comment_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="italic"
+        android:textSize="12sp"
+        android:layout_margin="5dp"/>
 
-        <TextView
-            android:id="@+id/post_single_comment_created_on"
-            android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            card_view:layout_constraintTop_toBottomOf="@id/post_single_comment_content"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="italic"
-            android:textSize="12sp"
-            android:layout_margin="5dp"
-            android:gravity="end"/>
+    <TextView
+        android:id="@+id/post_single_comment_created_on"
+        android:layout_width="wrap_content"
+        android:layout_height="15dp"
+        app:layout_constraintTop_toBottomOf="@id/post_single_comment_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textStyle="italic"
+        android:textSize="12sp"
+        android:layout_margin="5dp"
+        android:gravity="end"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
