--- a/app/src/main/res/layout/fragment_simple_post_page.xml
+++ b/app/src/main/res/layout/fragment_simple_post_page.xml
@@ -9,14 +9,16 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- Title Text View -->
             <TextView
                 android:id="@+id/post_title_text_view"
                 android:layout_width="match_parent"
@@ -26,31 +28,34 @@
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <!-- Text Content Paragraphs Table Layout -->
+            <TableLayout
+                android:id="@+id/post_p_content_table_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:stretchColumns="*"
+                app:layout_constraintTop_toBottomOf="@id/post_title_text_view"/>
+
             <TextView
-            android:id="@+id/post_content_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toBottomOf="@id/post_title_text_view" />
+                android:id="@+id/comments_literal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/post_p_content_table_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="@string/comments"
+                android:visibility="gone"
+                android:textSize="20sp"/>
 
-        <TextView
-            android:id="@+id/comments_literal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toBottomOf="@id/post_content_text_view"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/comments"
-            android:visibility="gone"
-            android:textSize="20sp"/>
-
-        <TableLayout
-            android:id="@+id/post_page_table_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:stretchColumns="*"
-            app:layout_constraintTop_toBottomOf="@id/comments_literal"/>
+            <com.unoffical.barcablaugranes.custom.CustomExpandableListView
+                android:id="@+id/post_comments_exp_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="0.5dp"
+                app:layout_constraintTop_toBottomOf="@id/comments_literal" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
