--- a/app/src/main/res/layout/post_single_comment_item.xml
+++ b/app/src/main/res/layout/post_single_comment_item.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <View
-        android:id="@+id/post_single_comment_divider"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+    android:paddingStart="80dp"
+    android:paddingBottom="5dp"
+    android:paddingEnd="5dp">
 
     <TextView
         android:id="@+id/post_single_comment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/post_single_comment_divider"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:layout_margin="5dp"/>
 
@@ -52,7 +47,5 @@
         android:textSize="12sp"
         android:layout_margin="5dp"
         android:gravity="end"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
