--- a/app/src/main/res/layout/fragment_post_page.xml
+++ b/app/src/main/res/layout/fragment_post_page.xml
@@ -7,7 +7,7 @@
 
     <include layout="@layout/progress_bar"/>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
@@ -48,17 +48,16 @@
                 android:visibility="gone"
                 android:textSize="20sp"/>
 
-            <com.unoffical.barcablaugranes.custom.CustomExpandableListView
-                android:id="@+id/post_comments_exp_list_view"
+            <!-- Comment Recycler ListView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragment_post_page_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-                android:divider="@android:color/darker_gray"
-                android:dividerHeight="0.5dp"
-                app:layout_constraintTop_toBottomOf="@id/comments_literal" />
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@id/comments_literal"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
