--- a/app/src/main/res/layout/post_single_comment_item.xml
+++ b/app/src/main/res/layout/post_single_comment_item.xml
@@ -4,16 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:paddingStart="80dp"
-    android:paddingBottom="5dp"
-    android:paddingEnd="5dp">
+    android:layout_margin="5dp"
+    android:background="?android:attr/selectableItemBackground">
+
+    <View
+        android:id="@+id/post_single_comment_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/post_single_comment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post_single_comment_divider"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_margin="5dp"/>
