--- a/app/src/main/res/layout/fragment_post_page.xml
+++ b/app/src/main/res/layout/fragment_post_page.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorDarkBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include layout="@layout/progress_bar"/>
@@ -26,6 +27,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="@android:color/white"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Text Content Paragraphs Table Layout -->
@@ -46,7 +48,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:text="@string/comments"
                 android:visibility="gone"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="@android:color/white"/>
 
             <!-- Comment Recycler ListView -->
             <androidx.recyclerview.widget.RecyclerView
