--- a/app/src/main/res/layout/post_single_comment_item.xml
+++ b/app/src/main/res/layout/post_single_comment_item.xml
@@ -4,14 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_margin="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:background="?android:attr/selectableItemBackground">
 
     <View
         android:id="@+id/post_single_comment_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
+        android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -19,9 +20,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/post_single_comment_divider"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textStyle="bold"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/post_single_comment_content"
@@ -30,7 +33,8 @@
         app:layout_constraintTop_toBottomOf="@id/post_single_comment_title"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="14sp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/post_single_comment_username"
@@ -40,7 +44,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="italic"
         android:textSize="12sp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/post_single_comment_created_on"
@@ -51,6 +56,7 @@
         android:textStyle="italic"
         android:textSize="12sp"
         android:layout_margin="5dp"
-        android:gravity="end"/>
+        android:gravity="end"
+        android:textColor="@android:color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
