--- a/app/src/main/res/layout/post_single_comment_item.xml
+++ b/app/src/main/res/layout/post_single_comment_item.xml
@@ -11,8 +11,8 @@
     <View
         android:id="@+id/post_single_comment_divider"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/white"
+        android:layout_height="0.5dp"
+        android:background="?android:attr/listDivider"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -22,9 +22,7 @@
         app:layout_constraintTop_toBottomOf="@id/post_single_comment_divider"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:layout_margin="5dp"
-
-        android:textColor="@android:color/white"/>
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/post_single_comment_content"
@@ -33,8 +31,7 @@
         app:layout_constraintTop_toBottomOf="@id/post_single_comment_title"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="14sp"
-        android:layout_margin="5dp"
-        android:textColor="@android:color/white"/>
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/post_single_comment_username"
@@ -44,8 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="italic"
         android:textSize="12sp"
-        android:layout_margin="5dp"
-        android:textColor="@android:color/white"/>
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/post_single_comment_created_on"
@@ -56,7 +52,6 @@
         android:textStyle="italic"
         android:textSize="12sp"
         android:layout_margin="5dp"
-        android:gravity="end"
-        android:textColor="@android:color/white"/>
+        android:gravity="end"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
