--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
