--- a/app/src/main/res/layout/fragment_post_page.xml
+++ b/app/src/main/res/layout/fragment_post_page.xml
@@ -31,47 +31,38 @@
             <!-- Sub Title Text View -->
             <TextView
                 android:id="@+id/post_sub_title_text_view"
+                style="@style/SmallDetailTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:textSize="16sp"
-                android:alpha=".7"
                 android:textStyle="italic"
                 app:layout_constraintTop_toBottomOf="@id/post_title_text_view" />
 
             <!-- Author Text View -->
             <TextView
                 android:id="@+id/post_page_author_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/SmallDetailTextView"
                 android:layout_margin="10dp"
-                android:textSize="12sp"
-                android:alpha=".7"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/post_sub_title_text_view" />
 
             <!-- Date Text View -->
             <TextView
                 android:id="@+id/post_page_date_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/SmallDetailTextView"
                 android:layout_margin="10dp"
-                android:textSize="12sp"
-                android:alpha=".7"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/post_sub_title_text_view" />
 
-            <!-- Image View -->
-            <ImageView
-                android:id="@+id/post_page_image_view"
+            <!-- Image View with some extra information -->
+            <include
+                android:id="@+id/custom_image_view_layout"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/post_page_author_text_view"
-                android:contentDescription="@string/image_of_post" />
+                android:layout_height="wrap_content"
+                layout="@layout/post_custom_image_view"
+                app:layout_constraintTop_toBottomOf="@id/post_page_author_text_view"/>
 
             <!-- Text Content Paragraphs Table Layout -->
             <TableLayout
@@ -80,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:stretchColumns="*"
-                app:layout_constraintTop_toBottomOf="@id/post_page_image_view"/>
+                app:layout_constraintTop_toBottomOf="@id/custom_image_view_layout"/>
 
             <!-- Comment Recycler ListView -->
             <androidx.recyclerview.widget.RecyclerView
