--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0D47A1</color>
-    <color name="colorPrimaryDark">#1A237E</color>
+    <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#C62828</color>
 
     <color name="colorTextMainPostTitle">#000</color>
